--- a/myProject/signup.html
+++ b/myProject/signup.html
@@ -6,10 +6,14 @@
     <meta http-equiv="X-UA-compatible" content="ie-edge">
     <title>Signup</title>
     <link rel="stylesheet" href="signup-style.css">
+    <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,800;1,100;1,200;1,300;1,400&display=swap" rel="stylesheet">
 
 <body>
-    <main>
+    <div>
         <div class="background">
             <div class="box">
                 <form class="form">
@@ -20,11 +24,11 @@
                 </form>
             </div>  
             <div class="text">
-                <p>Have Account <a href="index.html">Login</a></p>     
+                <p>Have Account<a href="index.html">Login</a></p>     
             </div>    
             
         </div>
-        <div class="ft">
+        <!-- <div class="ft">
             <div class="f1">
                 <p>Our social media</p>
                 <a href="instagram.com">instagram</a>
@@ -46,7 +50,59 @@
                 <a href="twitter.com">twitter</a>
                 <a href="tiktok.com">tiktok</a>
             </div>
+        </div> -->
+    </div>
+    <footer class="footer">
+        <div class="container">
+        <div class="row">
+            <div class="footer-col">
+                <h1>company</h1>
+                <ul>
+                    <li><a href="#">about us</a></li>
+                    <li><a href="#">our services</a></li>
+                    <li><a href="#">privacy policy</a></li>
+                    <li><a href="#">affiliate program</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h1>get help</h1>
+                <ul>
+                    <li><a href="#">RAQ</a></li>
+                    <li><a href="#">shipping</a></li>
+                    <li><a href="#">return</a></li>
+                    <li><a href="#">order status</a></li>
+                    <li><a href="#">payment option</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h1>online shop</h1>
+                <ul>
+                    <li><a href="#">watch</a></li>
+                    <li><a href="#">bag</a></li>
+                    <li><a href="#">shoes</a></li>
+                    <li><a href="#">dress</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h1>follow us</h1>
+                <div class="social-links">
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+            </div>
         </div>
-    </main>
+        </div>
+    </footer>
+    <div class="copyright">
+        <div class="rows">
+            <div class="column - 2"></div>
+            <div class="column - 10">
+                <span>copyright © 2022 Patrick. All Rights reserved.</span>
+            </div>
+        </div>
+
+    </div>
 </body>
 </html>
